@@ -125,26 +125,36 @@ t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-GivenName-Douglas/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Image-Dog/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Image-Dog/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Image-Dog/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-Human/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-Human/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-Human/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-VersionEditionOrTranslation/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-VersionEditionOrTranslation/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-WikidataProperty/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-WikidataProperty/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-InstanceOf-WikidataProperty/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-ItemForThisSense-Dog/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-ItemForThisSense-Dog/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-ItemForThisSense-Dog/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Of-Poem/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Of-Poem/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Of-Poem/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-ReferenceURL-Fixture1/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-ReferenceURL-Fixture1/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-ReferenceURL-Fixture1/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Retrieved-Fixture1/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Retrieved-Fixture1/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-Retrieved-Fixture1/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-SexOrGender-Male/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-SexOrGender-Male/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Snak-Wikidata-StatedIn-VIAF/01-use.t
